# alpha-radar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: story-1.1-telegram-cashchat-smoke-test.md  story-1.2-telegram-channel-digest-ingestion.md  story-1.3-codex-cli-summarization-pipeline.md  story-1.4-split-long-telegram-digest.md  story-2.1-time-window-digests.md  story-2.2-operator-readable-digest-format.md  story-2.3-position-signals.md  story-2.4-window-digest-export-and-send.md  story-2.5-broadcast-digest-to-discord-and-telegram.md  story-2.6-discord-only-digest-send.md  (+8 more)
app/: __init__.py  cli.py  config.py
data/: alpha_digest_telegram.session  digest-2026-07-08-pipeline-test.md  digest-2026-07-08.md  digest-2026-07-09.md  window-digest-latest.md
docs/: epic-3-grading-decisions.md  public-meme-dashboard-plan.md  telegram-ids.md  window-digest-signal-enrichment-roadmap.md
scripts/: list_telegram_channels.py  run_6h_broadcast_digest.sh  run_6h_signal_grading_broadcast.sh  run_daily_digest.sh  run_signal_grading.py
tests/: test_broadcast_delivery.py  test_cli_commands.py  test_deduplicate.py  test_digest_builder.py  test_discord_send.py  test_extract_entities.py  test_llm_client.py  test_repeated_signals.py  test_score_messages.py  test_signal_grading.py  test_signal_memory.py  test_split_digest.py  test_telegram_ingestion.py  test_telegram_send.py  test_telegram_smoke.py
(+26 files in other folders)
