[project]
name = "alpha-digest"
version = "0.1.0"
description = "Self-hosted crypto alpha digest MVP"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "telethon>=1.36.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]

[project.scripts]
alpha = "app.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
